# gpu

./: .gitignore  CMakeLists.txt  Doxyfile  LLM.md  README.md
.github/workflows/: build-gpu-backends.yml  cuda-h100.yml  docs.yml  gpu-test.yml  release.yml
benchmarks/: CMakeLists.txt  bench_common.hpp
cmake/: lux-gpu.pc.in  luxgpu-config.cmake.in
docs/: api.md  examples.md  index.md  install.md
include/lux/: gpu.h
include/lux/gpu/: backend_plugin.h
kernels/: blake3.cu  blake3.metal  blake3.wgsl  blind_rotate.cu  blind_rotate.wgsl  blind_rotate_fused.cu  blind_rotate_fused.wgsl  bls12_381.cu  bls12_381.metal  bls12_381.wgsl  bsk_prefetch.cu  bsk_prefetch.wgsl  cggmp21.cu  cggmp21.metal  cggmp21.wgsl  dag_executor.cu  dag_executor.metal  dag_executor.wgsl  ed25519.cu  ed25519.metal  ed25519.wgsl  evm256.cu  evm256.metal  evm256.wgsl  external_product_batch.cu  external_product_batch.wgsl  external_product_fused.cu  external_product_fused.wgsl  fhe_kernels.cu  fhe_kernels.wgsl  four_step_ntt.cu  four_step_ntt.wgsl  frost.cu  frost.metal  frost.wgsl  fused_external_product.cu  fused_external_product.wgsl  keccak256.cu  keccak256.metal  keccak256.wgsl  (+36 more)
src/: bn254_field.hpp  cpu_backend.cpp  cuda_backend.cpp  dawn_backend.cpp  gpu_core.cpp  gpu_internal.h  kernel_loader.cpp  metal_backend.mm  plugin_loader.hpp  zk_ops.cpp
test/: bench_all_crypto.cpp  bench_ecrecover.cpp  test_backends.cpp  test_core.cpp  test_coverage_complete.cpp  test_cpu.cpp  test_cuda_cpu.cpp  test_edge_cases.cpp  test_zk_ops.cpp
webgpu/: CMakeLists.txt  gpu.hpp
webgpu/examples/render/: run.cpp
webgpu/examples/shadertui/: run.cpp
webgpu/examples/transpose/: run.cpp
webgpu/experimental/kernels/: gpt2_webgpu.cpp  gpt2_webgpu_aot.cpp
webgpu/kernels/fhe/: ntt_fhe.wgsl
webgpu/kernels/zk/: fhe.wgsl  merkle.wgsl  ntt.wgsl  poseidon2.wgsl
webgpu/utils/: array_utils.hpp
